# VitalClaw

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
docs/: alerts.md  architecture.md  codex.md  data-model.md  mvp.md  product.md
plugins/vitalclaw-health-routing/: .mcp.json
plugins/vitalclaw-health-routing/.codex-plugin/: plugin.json
plugins/vitalclaw-health-routing/skills/health-question-routing/: SKILL.md
src/vitalclaw/: __init__.py  cli.py  mcp_server.py  runtime.py  schema.py  service.py  ui.py  ui_snapshot.py
src/vitalclaw/assets/: Project.glb
src/vitalclaw/features/: __init__.py  materialize.py
src/vitalclaw/ingest/: __init__.py  health_export_remote.py  open_wearables.py
src/vitalclaw/monitor/: __init__.py  baselines.py  recovery.py
src/vitalclaw/storage/: __init__.py  db.py
tests/: helpers.py  test_chat_routing.py  test_features.py  test_health_export_remote.py  test_open_wearables.py  test_profile_bootstrap.py  test_recovery.py  test_runtime_flow.py  test_ui.py
